objects/BMCServiceDesk__Task__c.object
<CustomObject>
    <customHelpPage>BMCServiceDesk__StdFormHelpTask</customHelpPage>
    <description>This object allows you to store data for tasks.</description>
    <fields>
        <fullName>BMCServiceDesk__ACDeviceID__c</fullName>
        <description>Device ID for the BCM Device</description>
        <label>BCM Device ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ACExecute__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Defines if the AssetCore Operational Rule should be deployed automatically</description>
        <label>BCM Execute</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ACOpRuleID__c</fullName>
        <label>BCM Operational Rule</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ACOpRuleStatusDescription__c</fullName>
        <label>Operational Rule Status Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ACOpRuleStatus__c</fullName>
        <label>BCM Operational Rule Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Approval Rejected</fullName>
                </value>
                <value>
                    <fullName>Execution Error</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                    <default>true</default>
                    <label>Not Applicable</label>
                </value>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Request Error</fullName>
                </value>
                <value>
                    <fullName>Request Pending</fullName>
                </value>
                <value>
                    <fullName>Request Successful</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ACRequiresApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BCM Requires Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Additional_email_information__c</fullName>
        <inlineHelpText>Use this field to add additional information to the email even after selecting the email template.</inlineHelpText>
        <label>Additional email information</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__BLANK__c</fullName>
        <description>Use this field to add space between fields in a Console fieldset.</description>
        <label>&lt;BLANK&gt;</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Category_ID__c</fullName>
        <formula>BMCServiceDesk__FKCategory__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From the list of options, select the task&apos;s category. Categories allow you to classify the task using standard classifications, which can be easily tracked for reporting purposes.</inlineHelpText>
        <label>Category~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Client_Account__c</fullName>
        <formula>IF(ISBLANK(BMCServiceDesk__FKClient__r.Contact.Account.Name),BMCServiceDesk__FKClient__r.BMCServiceDesk__Account_Name__c,BMCServiceDesk__FKClient__r.Contact.Account.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Client_First_Name__c</fullName>
        <formula>BMCServiceDesk__FKClient__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is automatically set to the first name of the client who submitted the task.</inlineHelpText>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Client_ID__c</fullName>
        <formula>BMCServiceDesk__FKClient__r.Username</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is automatically set to the Client ID of the client who submitted the task.</inlineHelpText>
        <label>Client ID~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Client_Last_Name__c</fullName>
        <formula>BMCServiceDesk__FKClient__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From the list of options, select the last name of the client who is submitting the task.</inlineHelpText>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Client_Name__c</fullName>
        <label>Client Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Client_Type__c</fullName>
        <label>Client Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>User</fullName>
                    <default>true</default>
                    <label>User</label>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Closed_By__c</fullName>
        <formula>BMCServiceDesk__FKClosedBy__r.Username</formula>
        <inlineHelpText>This field is automatically set to the Staff ID of the currently logged-on staff. If required, you can use this field to select a different staff from the currently logged-on staff.</inlineHelpText>
        <label>Closed By~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Compliant__c</fullName>
        <formula>IF(ISNULL(BMCServiceDesk__dueDateTime__c), &quot;YES&quot;, 
	( IF( ISNULL(BMCServiceDesk__closeDateTime__c), ( IF(BMCServiceDesk__dueDateTime__c &gt;= NOW(), &quot;YES&quot;, &quot;NO&quot;)), 
		( IF(BMCServiceDesk__dueDateTime__c &gt;= BMCServiceDesk__closeDateTime__c, &quot;YES&quot;, &quot;NO&quot;))
	))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Compliant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Deep_View__c</fullName>
        <formula>HYPERLINK(&quot;/apex/BMCServiceDesk__DeepView?id=&quot;+Id, IMAGE(&quot;/resource/BMCServiceDesk__SDEFStyles/SDEFbuttons/deep-view.png&quot;, &quot;&quot;, 18, 18), &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SmartView</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DisplayInSS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display in Self Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Dummy_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag toggles if there is a dummy update on Task record.</description>
        <label>Workflow Controller</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ExistsInManifest__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox is used for programmatic purpose.</description>
        <inlineHelpText>This checkbox is used for programmatic purpose.</inlineHelpText>
        <label>ExistsInManifest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>From the list of options, select the task&apos;s category. Categories allow you to classify the task using standard classifications, which can be easily tracked for reporting purposes.</inlineHelpText>
        <label>Category</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BMCServiceDesk__Category__c.BMCServiceDesk__inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <infoMessage>Select an active category.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>BMCServiceDesk__Category__c</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKChange__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Change Request</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BMCServiceDesk__Change_Request__c.BMCServiceDesk__Inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <infoMessage>Select an active change request</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>BMCServiceDesk__Change_Request__c</referenceTo>
        <relationshipLabel>Linked Tasks</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKClient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field is automatically set to the Client ID of the client who submitted the task.</inlineHelpText>
        <label>Client ID</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tasks2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKClosedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field is automatically set to the Staff ID of the currently logged-on staff. If required, you can use this field to select a different staff from the currently logged-on staff.</inlineHelpText>
        <label>Closed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tasks3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKImpact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>From the list of options, select the task&apos;s level of impact. The level of impact and the urgency are used to calculate the priority of the task.</inlineHelpText>
        <label>Impact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BMCServiceDesk__Impact__c.BMCServiceDesk__inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <infoMessage>Select an active impact.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>BMCServiceDesk__Impact__c</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKIncident__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incident</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BMCServiceDesk__Incident__c.BMCServiceDesk__inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <infoMessage>Select an active incident.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>BMCServiceDesk__Incident__c</referenceTo>
        <relationshipLabel>Linked Tasks</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKLead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKOpenBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Staff</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.BMCServiceDesk__IsStaffUser__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Tasks1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKPriority__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The priority is calculated depending on the urgency and impact values that you have selected. If required, you can use this field to select a different priority value from the calculated value.</inlineHelpText>
        <label>Priority</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BMCServiceDesk__Priority__c.BMCServiceDesk__inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <infoMessage>Select an active priority</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>BMCServiceDesk__Priority__c</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKProblem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Problem</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BMCServiceDesk__Problem__c.BMCServiceDesk__Inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <infoMessage>Select active problem</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>BMCServiceDesk__Problem__c</referenceTo>
        <relationshipLabel>Linked Tasks</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKRelease__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BMCServiceDesk__Release__c.BMCServiceDesk__Inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <infoMessage>Select an active release</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>BMCServiceDesk__Release__c</referenceTo>
        <relationshipLabel>Linked Tasks</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKStatus__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>From the list of options, select the appropriate status for the task. Status is used to display the progress of a task through its stages of opening to closure.</inlineHelpText>
        <label>Status</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Select an active status that applies to tasks.</errorMessage>
            <filterItems>
                <field>BMCServiceDesk__Status__c.BMCServiceDesk__inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>BMCServiceDesk__Status__c.BMCServiceDesk__appliesToTask__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>BMCServiceDesk__Status__c</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Template</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BMCServiceDesk__SYSTemplate__c.BMCServiceDesk__inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>BMCServiceDesk__SYSTemplate__c.BMCServiceDesk__templateFor__c</field>
                <operation>equals</operation>
                <value>Task</value>
            </filterItems>
            <filterItems>
                <field>BMCServiceDesk__SYSTemplate__c.BMCServiceDesk__systemTemplate__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <infoMessage>Select active &quot;Template For&quot; task.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>BMCServiceDesk__SYSTemplate__c</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKUrgency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>From the list of options, select how quickly the task needs to be completed. The urgency and the level of impact are used to calculate the priority of the task.</inlineHelpText>
        <label>Urgency</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BMCServiceDesk__Urgency__c.BMCServiceDesk__inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <infoMessage>Select an active urgency.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>BMCServiceDesk__Urgency__c</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Impact_ID__c</fullName>
        <formula>BMCServiceDesk__FKImpact__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From the list of options, select the task&apos;s level of impact. The level of impact and the urgency are used to calculate the priority of the task.</inlineHelpText>
        <label>Impact~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Launch_console__c</fullName>
        <formula>HYPERLINK(&quot;/apex/BMCServiceDesk__ConsoleRedirect?formulaFieldName=TaskLaunchConsole&amp;recordName=&quot;+Name+&quot;&amp;recordId=&quot;+Id+&quot;&amp;isdtp=vw&amp;uiTheme=&quot;+$User.UIThemeDisplayed+&quot;&amp;formLayoutId=&quot;+ CASESAFEID(BMCServiceDesk__RF_FKLayout__c), Name, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Launch Console</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__LockedRecordTimestamp__c</fullName>
        <description>this field is used in case of record locking.</description>
        <label>LockedRecordTimestamp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Opened_DateTime__c</fullName>
        <formula>BMCServiceDesk__openDateTime__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opened Date~</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Priority_ID__c</fullName>
        <formula>BMCServiceDesk__FKPriority__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The priority is calculated depending on the urgency and impact values that you have selected. If required, you can use this field to select a different priority value from the calculated value.</inlineHelpText>
        <label>Priority~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Queue__c</fullName>
        <description>Queue to which the record is assigned.</description>
        <formula>IF(UPPER(LEFT(OwnerId , 3)) =&quot;00G&quot;,BMCServiceDesk__queueName__c ,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Queue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__RF_Attachments__c</fullName>
        <formula>IF (BMCServiceDesk__RF_HasAttachments__c&gt;0,IMAGE(&quot;/resource/BMCServiceDesk__SDEFStyles/SDEFicons/paperclip.svg&quot;, $Label.bmcservicedesk__attachments, 15, 15), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attachments</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__RF_FKLayout__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores the layout for the task.</description>
        <inlineHelpText>Select the layout for task.</inlineHelpText>
        <label>Layout Type</label>
        <referenceTo>BMCServiceDesk__ConsoleLayoutDetail__c</referenceTo>
        <relationshipLabel>LayoutTasks</relationshipLabel>
        <relationshipName>LayoutTasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__RF_HasAttachments__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Specifies whether a record has an attachment or not. A positive value in this field implies that the record has attachments.</description>
        <label>Has Attachments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__RF_LTEC__c</fullName>
        <description>This field is reserved for internal use.</description>
        <label>LTEC</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__RF_SkipTriggerExecution__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used in BETA Feature as a flag to skip Remedyforce trigger execution. True value skips the execution and false will execute the trigger as it is.</description>
        <label>Skip RF Trigger Execution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Recurrence__c</fullName>
        <label>Recurrence</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__RecurringParentRecordId__c</fullName>
        <label>Recurring Parent Record ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Scheduled_End_Date__c</fullName>
        <label>Scheduled End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Scheduled_Start_Date__c</fullName>
        <label>Scheduled Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Service_Request_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service Request Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ShowDueDateDialog__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field decides the opening of pop up window for recalculation of due date in case of Standard Forms.</description>
        <label>Show DueDate Dialog</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Status_ID__c</fullName>
        <formula>BMCServiceDesk__FKStatus__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From the list of options, select the appropriate status for the task. Status is used to display the progress of a task through its stages of opening to closure.</inlineHelpText>
        <label>Status~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Task_console_detail_link__c</fullName>
        <description>To be used in Service Cloud Console</description>
        <formula>HYPERLINK(&quot;/apex/BMCServiceDesk__ConsoleRouting?objectName=Task&amp;record_name=&quot;&amp; Name &amp;&quot;&amp;record_id=&quot; &amp; Id &amp; &quot;&amp;isdtp=vw&amp;isServiceCloudConsole=true&quot;,Name, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task #+</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__TemplateAlreadyApplied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Template Already Applied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__TemplateName__c</fullName>
        <label>Template Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Total_Duration__c</fullName>
        <label>Total Duration (minutes)</label>
        <summarizedField>BMCServiceDesk__TaskHistory__c.BMCServiceDesk__Action_Duration__c</summarizedField>
        <summaryForeignKey>BMCServiceDesk__TaskHistory__c.BMCServiceDesk__FKWO__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__UpdateCount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field can be used in workflows to increment the count when a new record is added to the Task History.</description>
        <label>Record Update Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Urgency_ID__c</fullName>
        <formula>BMCServiceDesk__FKUrgency__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From the list of options, select how quickly the task needs to be completed. The urgency and the level of impact are used to calculate the priority of the task.</inlineHelpText>
        <label>Urgency~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__WebAPIConfiguration__c</fullName>
        <inlineHelpText>Enter Web API configuration names</inlineHelpText>
        <label>Web API Configuration</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__busAssessment__c</fullName>
        <label>Bus Assessment</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__closeDateTime__c</fullName>
        <inlineHelpText>This field is automatically set to the date and time at which the task is closed.</inlineHelpText>
        <label>Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__closedProfile__c</fullName>
        <label>Closed Profile</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__completedDate__c</fullName>
        <label>Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__contactType__c</fullName>
        <label>Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Walkup</fullName>
                </value>
                <value>
                    <fullName>Mail Listen</fullName>
                </value>
                <value>
                    <fullName>Email Other</fullName>
                </value>
                <value>
                    <fullName>Self Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__costEstimate__c</fullName>
        <label>Cost Estimate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__createdOn__c</fullName>
        <label>Created On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__decision__c</fullName>
        <label>Decision</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__dueDateTime__c</fullName>
        <inlineHelpText>This field is automatically set to the date and time at which the task should be completed based on the priority&apos;s duration. If required, you can use this field to select a different due date from the calculated due date.</inlineHelpText>
        <label>Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__duration__c</fullName>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__eMailOriginator__c</fullName>
        <label>EMail Originator</label>
        <length>510</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__endDate__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this field if the task record is no longer valid, but the record has to be retained for compliance with the records retention policy. For example, if a client has left the account, all tasks associated with the client would be invalid.</inlineHelpText>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__isReopened__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isReopened</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__note__c</fullName>
        <label>Note</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__openDateTime__c</fullName>
        <inlineHelpText>This field is automatically set to the date and time at which the task was created.</inlineHelpText>
        <label>Opened Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__openedProfile__c</fullName>
        <label>Opened Profile</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__processTemplateOrder__c</fullName>
        <label>Process Template Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__queueName__c</fullName>
        <inlineHelpText>Displays the name of the queue to which the task was last assigned.</inlineHelpText>
        <label>Last Queue</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__recommendations__c</fullName>
        <label>Recommendations</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__recommendedFixDateTime__c</fullName>
        <label>Recommended Fix Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__resourceDescription__c</fullName>
        <label>Resource Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__responseDateTime__c</fullName>
        <label>Response Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__shortDescription__c</fullName>
        <inlineHelpText>This field will contain value first 255 character value of description field.</inlineHelpText>
        <label>Short Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__startDate__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__state__c</fullName>
        <defaultValue>true</defaultValue>
        <label>State Open</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>